# Hackathon_2_Todo_App_Q4

./: QWEN.md  README.md
Phase-II/: $null  PROJECT_SUMMARY.md  pyproject.toml  test-theme-toggle.js  todo_app.db
Phase-II/.claude/: history.jsonl  settings.local.json  stats-cache.json
Phase-II/.claude/agents/: architecture-planner.md  auth-agent.md  backend-agent.md  compliance-agent.md  database-agent.md  frontend-agent.md  integration-tester.md  product-agent.md  qa-agent.md  spec-writer.md
Phase-II/.claude/debug/: 03218156-931d-421e-b1ef-925e7f2dbab7.txt  0b73102a-fc63-4c80-adc6-8d692ad742b8.txt  0f468670-6a51-4e93-8dc1-b81057e5a870.txt  4a45ac91-095c-4891-82ea-bd78c3568e16.txt  5cd25282-8166-40c8-95f2-a55c7a261432.txt  70880a91-47a4-404d-b3d5-ddd4bd985b4c.txt  82099151-35db-4762-83b8-540b8c4d43ea.txt  a5e57164-0d18-4bd1-aa14-cae534234a22.txt  bd03a04d-a606-48f2-9553-0c5f9fca8744.txt  dfa8a268-a293-435a-8bcd-e240248eb597.txt  ecc54902-331a-439c-9e0f-24e8fb5d4ecc.txt  f02aea0c-9ce6-4f88-911a-3687a26d2c78.txt  f58f5707-c6b7-47a6-be61-bfffb030a95e.txt  f69147f8-ea02-48eb-acc6-0d8621c473b1.txt  f7da6cfb-001e-4977-b482-72cd323952f1.txt
Phase-II/.claude/plugins/: known_marketplaces.json
Phase-II/.specify/memory/: constitution.md
Phase-II/backend/: create_test_data.py  debug_db.py  exceptions.py  main.py  minimal_server.py  minimal_test.py  requirements.txt  test_auth.py  test_db.py  test_register.py  todo_app.db  verify_data.py  very_minimal.py
Phase-II/frontend/: README.md  next.config.ts  package-lock.json  package.json  simple-server.js  tailwind.config.ts
(+191 files in other folders)
